changed title and made contact section work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- TITLE AND FAVICON -->
-    <title>Learning bootstrap v5 with sass</title>
+    <title>Websites-LL</title>
 
     <!-- LINK CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -74,10 +74,10 @@
       <!-- START THE CONTENT FOR THE INTRO  -->
       <div class="col-md-6 intros text-start">
         <h1 class="display-2">
-          <span class="display-2--intro">Hey!, I'm Patrick</span>
+          <span class="display-2--intro">Hey!, We're Websites-LL.</span>
           <span class="display-2--description lh-base">
-            this is a multi-purpose responsive layout created with bootstrap v5. 
-            (here your can place your description text)
+            Do you Want a Professional Website? We will build it for you with Bootstrap!
+          </span>
           </span>
         </h1>
         <button type="button" class="rounded-pill btn-rounded">Get in Touch
@@ -115,9 +115,7 @@
       <div class="col-md-6">
         <div class="bg-white p-4 text-start">
           <p class="fw-light">
-            Lorem ipsum dolor sit amet consectetur architecto magni, 
-            dicta maxime laborum temporibus dolorem esse doloremque illo quas nisi enim molestias. 
-            Tempore ducimus molestiae in dolore enim.
+            We Are a Company that Develop Your Website, Designs It and also Cloud Host Your Website. With Our Unique Designs We'll Create Your Website After Your Wishes and Ideas.
           </p>
         </div>
       </div>
@@ -130,9 +128,7 @@
           <div class="icon d-block fas fa-code"></div>
           <h3 class="display-3--title mt-1">Web development</h3>
           <p class="lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-             doloremque autem quibusdam blanditiis harum alias hic accusantium 
-             maxime atque ratione magni repellat?
+          Web Development is The Work Involved in Developing a Website For the Internet (World Wide Web) or An Intranet. Among Web Professionals, "Web development" Usually Refers to The Main Non-Design Aspects of Building Web Sites: Writing Markup and Coding.
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
             <span><i class="fas fa-arrow-right"></i></span>
@@ -640,49 +636,33 @@
           <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
-        <h5 class="text-capitalize fw-bold">company</h5>
-        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
-        <ul class="list-inline campany-list">
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Testimonials</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
-        <h5 class="text-capitalize fw-bold">Learn More</h5>
-        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
-        <ul class="list-inline campany-list">
-          <li><a href="#">Support</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Developers</a></li>
-          <li><a href="#">Legal</a></li>
-        </ul>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
-        <h5 class="text-capitalize fw-bold">contact</h5>
-        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
-        <ul class="list-inline campany-list">
-          <li><a href="#" class="contact_footer">Tel:</a><a href=""> +49 176 73216265</a></li><li>
-          <li><a href="#" class="contact_footer">Fax:</a><a href=""> +49 123456789</a></li><li>
-          <li><a href="#" class="contact_footer">E-Mail:</a><a href=""> contact@us.com</a></li>
-          <li><a href="#">Musterstraße 123</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="footer-bottom pt-5 pb-5">
-    <div class="container">
-      <div class="row text-center text-white">
-        <div class="col-12">
-          <div class="footer-bottom__copyright">
-            &COPY; Copyright 2021 <a href="https://github.com/startup-LL">Startup-LL</a> | Created by <a href="https://github.com/syph1000" target="_blank">Leo Fielstette</a> and <a href="https://github.com/trystrikex" target="_blank">Lewin Stoff</a>
-          </div>
+      <div class="col-12 col-lg-6 bg-white shadow p-3">
+        <div class="form w-100 pb-2">
+          <h4 class="display-3--title mb-5">start your project</h4>
+          <form target="_blank" action="https://formsubmit.co/eabd3ecedfb093fffe82c17d302435d7" class="row" method="POST">
+            <div class="col-lg-6 col-md mb-3">
+              <input type="text" placeholder="First Name" name="name" id="inputFirstName" class="shadow form-control form-control-lg" required>
+            </div>
+            <div class="col-lg-6 col-md mb-3">
+              <input type="text" placeholder="Last Name" name="lastname" id="inputLastName" class="shadow form-control form-control-lg" required>
+            </div>
+            <div class="col-lg-12 mb-3">
+              <input type="email" placeholder="email address" name="email" id="inputEmail" class="shadow form-control form-control-lg" required>
+            </div>
+            <div class="col-lg-12 mb-3">
+              <textarea name="message" placeholder="message" name="message" id="message" rows="8" class="shadow form-control form-control-lg" required></textarea>
+            </div>
+            <div class="text-center d-grid mt-1">
+              <button type="submit" class="btn btn-primary rounded-pill pt-3 pb-3">
+                submit
+                <i class="fas fa-paper-plane"></i>
+              </button>
+            </div>
+            <input type="hidden" name="_subject" value="YOU GOT A NEW CONTACT!!!">
+            <input type="hidden" name="_next" value="../pages/thank_you.html">
+          </form>
         </div>
       </div>
-    </div>
-  </div>
 </footer>
 
 <!-- BACK TO TOP BUTTON  -->
