--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="icon d-block fas fa-code"></div>
           <h3 class="display-3--title mt-1">Web development</h3>
           <p class="lh-lg">
-          Web Development is The Work Involved in Developing a Website For the Internet (World Wide Web) or An Intranet. Among Web Professionals, "Web development" Usually Refers to The Main Non-Design Aspects of Building Web Sites: Writing Markup and Coding.
+          Web Development is The Work Involved in Developing a Website For the Internet or An Intranet. Among Web Professionals, "Web development" Usually Refers to The Main Non-Design Aspects of Building Web Sites: Writing Markup and Coding.
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
             <span><i class="fas fa-arrow-right"></i></span>
@@ -152,9 +152,7 @@
           <div class="icon d-block fas fa-cloud-upload-alt"></div>
           <h3 class="display-3--title mt-1">cloud hosting</h3>
           <p class="lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-             doloremque autem quibusdam blanditiis harum alias hic accusantium 
-             maxime atque ratione magni repellat?
+            What is Cloud Hosting? Cloud Hosting Makes Applications and Websites Accessible Using Cloud Resources. Unlike Traditional Hosting, Solutions Are not Deployed On a Single Server. Instead, a Network of Connected Virtual and Physical Cloud Servers Hosts the Application or Website, Ensuring greater Flexibility and Scalability.
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
             <span><i class="fas fa-arrow-right"></i></span>
@@ -569,6 +567,7 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
+      <!-- CONTENT FOR THE MOBILE NUMBER  -->
       <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
         <div class="contact-box__icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -579,10 +578,11 @@
           </svg>
         </div>
         <div class="contact-box__info">
-          <a href="#" class="contact-box__info--title">+1 728365413</a>
-          <p class="contact-box__info--subtitle">  Mon-Fri 9am-6pm</p>
+          <a href="#" class="contact-box__info--title">+49 176 73216265</a>
+          <p class="contact-box__info--subtitle">Mon-Fri 14pm-23pm</p>
         </div>
-      </div> 
+      </div>  
+      <!-- CONTENT FOR EMAIL  -->
       <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
         <div class="contact-box__icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-opened" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -598,6 +598,7 @@
           <p class="contact-box__info--subtitle">Online support</p>
         </div>
       </div>
+      <!-- CONTENT FOR LOCATION  -->
       <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
         <div class="contact-box__icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -610,24 +611,20 @@
           </svg>
         </div>
         <div class="contact-box__info">
-          <a href="#" class="contact-box__info--title">New York, USA</a>
-          <p class="contact-box__info--subtitle">NY 10012, US</p>
+          <a href="#" class="contact-box__info--title">Hamburg, Germany</a>
+          <p class="contact-box__info--subtitle">HH 22589, GER</p>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- START THE SOCIAL MEDIA CONTENT  -->
   <div class="footer-sm" style="background-color: #212121;">
     <div class="container">
       <div class="row py-4 text-center text-white">
-        <div class="col-lg-5 col-md-6 mb-4 mb-md-0"></div>
-      </div>
-    </div>
-  </div>
-  <div class="container mt-5">
-    <div class="row text-white justify-content-center mt-3 pb-3">
-      <div class="col-12 col-sm-6 col-lg-6 mx-auto">
-        <h5 class="text-capitalize fw-bold">Startup-LL</h5>
-        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+        <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
+          connect with us on social media
+        </div>
         <div class="col-lg-7 col-md-6">
           <a href="#"><i class="fab fa-facebook"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
@@ -636,33 +633,64 @@
           <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
-      <div class="col-12 col-lg-6 bg-white shadow p-3">
-        <div class="form w-100 pb-2">
-          <h4 class="display-3--title mb-5">start your project</h4>
-          <form target="_blank" action="https://formsubmit.co/eabd3ecedfb093fffe82c17d302435d7" class="row" method="POST">
-            <div class="col-lg-6 col-md mb-3">
-              <input type="text" placeholder="First Name" name="name" id="inputFirstName" class="shadow form-control form-control-lg" required>
-            </div>
-            <div class="col-lg-6 col-md mb-3">
-              <input type="text" placeholder="Last Name" name="lastname" id="inputLastName" class="shadow form-control form-control-lg" required>
-            </div>
-            <div class="col-lg-12 mb-3">
-              <input type="email" placeholder="email address" name="email" id="inputEmail" class="shadow form-control form-control-lg" required>
-            </div>
-            <div class="col-lg-12 mb-3">
-              <textarea name="message" placeholder="message" name="message" id="message" rows="8" class="shadow form-control form-control-lg" required></textarea>
-            </div>
-            <div class="text-center d-grid mt-1">
-              <button type="submit" class="btn btn-primary rounded-pill pt-3 pb-3">
-                submit
-                <i class="fas fa-paper-plane"></i>
-              </button>
-            </div>
-            <input type="hidden" name="_subject" value="YOU GOT A NEW CONTACT!!!">
-            <input type="hidden" name="_next" value="../pages/thank_you.html">
-          </form>
+    </div>
+  </div>
+
+    <!-- START THE CONTENT FOR THE CAMPANY INFO -->
+    <div class="container mt-5">
+      <div class="row text-white justify-content-center mt-3 pb-3">
+        <div class="col-12 col-sm-6 col-lg-6 mx-auto">
+          <h5 class="text-capitalize fw-bold">Websites-LL</h5>
+          <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+          <p class="lh-lg">
+            Do you Want a Professional Website? We will build it for you with Bootstrap!
+          </p>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+          <h5 class="text-capitalize fw-bold">company</h5>
+          <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+          <ul class="list-inline campany-list">
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Testimonials</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+          <h5 class="text-capitalize fw-bold">Learn More</h5>
+          <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+          <ul class="list-inline campany-list">
+            <li><a href="#">Support</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Developers</a></li>
+            <li><a href="#">Legal</a></li>
+          </ul>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+          <h5 class="text-capitalize fw-bold">contact</h5>
+          <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+          <ul class="list-inline campany-list">
+            <li><a href="#" class="contact_footer">Tel:</a><a href=""> +49 176 73216265</a></li><li>
+            <li><a href="#" class="contact_footer">Fax:</a><a href=""> +49 123456789</a></li><li>
+            <li><a href="#" class="contact_footer">E-Mail:</a><a href=""> contact@us.com</a></li>
+            <li><a href="#">Musterstraße 123</a></li>
+          </ul>
         </div>
       </div>
+    </div>
+  
+    <!-- START THE COPYRIGHT INFO  -->
+    <div class="footer-bottom pt-5 pb-5">
+      <div class="container">
+        <div class="row text-center text-white">
+          <div class="col-12">
+            <div class="footer-bottom__copyright">
+              &COPY; Copyright 2021 <a href="https://github.com/startup-LL">Websites-LL</a> | Created by <a href="https://github.com/syph1000" target="_blank">Leo Fielstette</a> and <a href="https://github.com/trystrikex" target="_blank">Lewin Stoff</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </footer>
 
 <!-- BACK TO TOP BUTTON  -->
