--- a/index2.0.html
+++ b/index2.0.html
@@ -598,7 +598,7 @@
           <p class="contact-box__info--subtitle">Online support</p>
         </div>
       </div>
-      <!-- CONTENT FOR LOCATION  -->
+      <!-- CONTENT FOR LOCATION -->
       <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
         <div class="contact-box__icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -662,8 +662,8 @@
           <ul class="list-inline campany-list">
             <li><a href="#">Support</a></li>
             <li><a href="#faq">FAQ</a></li>
-            <li><a href="#">Developers</a></li>
-            <li><a href="#">Legal</a></li>
+            <li><a href="https://github.com/Websites-LL">Developers</a></li>
+            <li><a href="#">Privacy</a>/<a href="">Imprint</a></li>
           </ul>
         </div>
         <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
