--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
 
 <script src="assets/vendors/js/glightbox.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="app.js"></script>
 
 </body>
 </html>
