--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
           </span>
           </span>
         </h1>
-        <button type="button" class="rounded-pill btn-rounded">Get in Touch
-          <span><i class="fas fa-arrow-right"></i></span>
-        </button>
+          <button type="button" class="rounded-pill btn-rounded">Get in Touch
+            <span><a href="#contact"><i class="fas fa-arrow-right"></i></a></span>
+          </button>
       </div>
       <!-- START THE CONTENT FOR THE VIDEO -->
       <div class="col-md-6 intros text-end">
@@ -131,7 +131,7 @@
           Web Development is The Work Involved in Developing a Website For the Internet or An Intranet. Among Web Professionals, "Web development" Usually Refers to The Main Non-Design Aspects of Building Web Sites: Writing Markup and Coding.
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
-            <span><i class="fas fa-arrow-right"></i></span>
+            <span><a href="#contact"><i class="fas fa-arrow-right"></i></a></span>
           </button>
         </div>
       </div>
@@ -155,7 +155,7 @@
             What is Cloud Hosting? Cloud Hosting Makes Applications and Websites Accessible Using Cloud Resources. Unlike Traditional Hosting, Solutions Are not Deployed On a Single Server. Instead, a Network of Connected Virtual and Physical Cloud Servers Hosts the Application or Website, Ensuring greater Flexibility and Scalability.
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
-            <span><i class="fas fa-arrow-right"></i></span>
+            <span><a href="#contact"><i class="fas fa-arrow-right"></i></a></span>
           </button>
         </div>
       </div>
@@ -578,7 +578,7 @@
           </svg>
         </div>
         <div class="contact-box__info">
-          <a href="#" class="contact-box__info--title">+49 176 73216265</a>
+          <a href="tel:0176 7321665" class="contact-box__info--title">+49 176 73216265</a>
           <p class="contact-box__info--subtitle">Mon-Fri 14pm-23pm</p>
         </div>
       </div>  
@@ -598,7 +598,7 @@
           <p class="contact-box__info--subtitle">Online support</p>
         </div>
       </div>
-      <!-- CONTENT FOR LOCATION  -->
+      <!-- CONTENT FOR LOCATION -->
       <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
         <div class="contact-box__icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -611,7 +611,7 @@
           </svg>
         </div>
         <div class="contact-box__info">
-          <a href="#" class="contact-box__info--title">Hamburg, Germany</a>
+          <a href="https://www.google.de/maps/place/Hempbarg+6A,+22589+Hamburg/@53.5788064,9.7905104,17z/data=!3m1!4b1!4m5!3m4!1s0x47b183c13987e7e5:0x69d50f1d1292e277!8m2!3d53.5788032!4d9.7927045" class="contact-box__info--title">Hamburg, Germany</a>
           <p class="contact-box__info--subtitle">HH 22589, GER</p>
         </div>
       </div>
@@ -626,17 +626,17 @@
           connect with us on social media
         </div>
         <div class="col-lg-7 col-md-6">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100077274617367" target="blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://twitter.com/websites_ll" target="blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://github.com/Websites-LL" target="blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/websitesll-gbr-598945229/" target="blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/websitesll/" target="blank"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
   </div>
 
-    <!-- START THE CONTENT FOR THE CAMPANY INFO -->
+    <!-- START THE CONTENT FOR THE COMPANY INFO -->
     <div class="container mt-5">
       <div class="row text-white justify-content-center mt-3 pb-3">
         <div class="col-12 col-sm-6 col-lg-6 mx-auto">
@@ -650,20 +650,20 @@
           <h5 class="text-capitalize fw-bold">company</h5>
           <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
           <ul class="list-inline campany-list">
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Testimonials</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
         <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
           <h5 class="text-capitalize fw-bold">Learn More</h5>
           <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
           <ul class="list-inline campany-list">
-            <li><a href="#">Support</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Developers</a></li>
-            <li><a href="#">Legal</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="#faq">FAQ</a></li>
+            <li><a href="https://github.com/Websites-LL">Developers</a></li>
+            <li><a href="#">Privacy</a>/<a href="">Imprint</a></li>
           </ul>
         </div>
         <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
@@ -673,7 +673,7 @@
             <li><a href="#" class="contact_footer">Tel:</a><a href=""> +49 176 73216265</a></li><li>
             <li><a href="#" class="contact_footer">Fax:</a><a href=""> +49 123456789</a></li><li>
             <li><a href="#" class="contact_footer">E-Mail:</a><a href=""> contact@us.com</a></li>
-            <li><a href="#">Musterstraße 123</a></li>
+            <li><a href="https://www.google.de/maps/place/Hempbarg+6A,+22589+Hamburg/@53.5788064,9.7905104,17z/data=!3m1!4b1!4m5!3m4!1s0x47b183c13987e7e5:0x69d50f1d1292e277!8m2!3d53.5788032!4d9.7927045">Hempbarg 6a, 22589 HH, GER</a></li>
           </ul>
         </div>
       </div>
@@ -685,7 +685,7 @@
         <div class="row text-center text-white">
           <div class="col-12">
             <div class="footer-bottom__copyright">
-              &COPY; Copyright 2021 <a href="https://github.com/startup-LL">Websites-LL</a> | Created by <a href="https://github.com/syph1000" target="_blank">Leo Fielstette</a> and <a href="https://github.com/trystrikex" target="_blank">Lewin Stoff</a>
+              &COPY; Copyright 2021 <a href="https://github.com/Websites-LL">Websites-LL</a> | Created by <a href="https://github.com/syph1000" target="_blank">Leo Fielstette</a> and <a href="https://github.com/trystrikex" target="_blank">Lewin Stoff</a>
             </div>
           </div>
         </div>
@@ -694,13 +694,12 @@
 </footer>
 
 <!-- BACK TO TOP BUTTON  -->
-<a href="#" class="shadow btn-primary rounded-circle back-to-top">
+<a href="#home" class="shadow btn-primary rounded-circle back-to-top">
   <i class="fas fa-chevron-up"></i>
 </a>
 
 <script src="assets/vendors/js/glightbox.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="app.js"></script>
 
 </body>
 </html>
